syntax = "proto3";

package common;

option go_package = "build/common";
import "protos/global/global.proto";

// 功能权限
message SysFunc {
  // 功能id
  string funcId = 1;  // @gotags: gorm:"primary_key;<-:create"
  // '功能父id(一级功能父id为1, 默认为1）
  string parentId = 2;  // @gotags: gorm:"<-:create"
  // 功能名称
  string name = 3;  // @gotags: gorm:"<-" validate:"required"
  // 权限标识
  string powerSign = 4;  // @gotags: gorm:"<-" validate:"required"
  // 排序
  int64 sortBy = 5;  // @gotags: gorm:"<-"
  // 应用id
  string appId = 6;  // @gotags: gorm:"<-"
  // 删除状态
  bool delStatus = 7;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 8;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 9;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 10;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 11;  // @gotags: gorm:"->" swaggerignore:"true"
}

message SysFuncListVo {
  // 功能id
  string funcId = 1;  // @gotags: gorm:"primary_key;<-:create"
  // '功能父id(一级功能父id为1, 默认为1）
  string parentId = 2;  // @gotags: gorm:"<-:create"
  // 功能名称
  string name = 3;  // @gotags: gorm:"<-" validate:"required"
  // 权限标识
  string powerSign = 4;  // @gotags: gorm:"<-" validate:"required"
  // 排序
  int64 sortBy = 5;  // @gotags: gorm:"<-"
  // 应用id
  string appId = 6;  // @gotags: gorm:"<-"
  // 删除状态
  bool delStatus = 7;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 8;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 9;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 10;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 11;  // @gotags: gorm:"->" swaggerignore:"true"
  // 子集功能
  repeated SysFuncListVo children = 12;  // @gotags  gorm:"-" json:"children"
}

// 功能查询参数
message SysFuncParam {
  // 功能名称
  string Name = 2;
}

message SysFuncIds {
  repeated string funcIds = 1;
  string userId = 2;
}

// 分页查询加权参数
message SysFuncAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  SysFuncParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 角色功能关联id
message RoleFuncParam {
  // 应用id
  string funcId = 1;
  // 角色id
  string roleId = 2;
}

// 返回结果
message SysFuncResponse {
  // 获取数据数量
  int64 count = 1;
  // 错误信息
  string Msg = 2;
  // 详情
  SysFunc detail = 3;
  // 列表
  repeated SysFuncListVo list = 4;
  // 授权的菜单id
  repeated string roleFuncIds = 5;
}

// 业务实现
service SysFuncService {
  // 新增
  rpc Create(SysFunc) returns (SysFuncResponse);

  // 修改
  rpc Update(SysFunc) returns (SysFuncResponse);

  // 删除
  rpc Delete(SysFuncIds) returns (SysFuncResponse);

  // 查询详情
  rpc FindById(SysFuncIds) returns (SysFuncResponse);

  // 查询列表
  rpc FindList(SysFuncAuthQuery) returns (SysFuncResponse);

  // 角色管理功能
  rpc FindFuncInfoByRoleIds(RoleFuncParam) returns (SysFuncResponse);
}
